[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cognitive-firewall"
version = "0.1.0"
description = "Enterprise-grade threat detection for Agentic AI systems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MSSDK"}
]
dependencies = [
    "openenv-core",
    "fastapi",
    "pydantic>=2.0.0",
    "uvicorn",
    "pinecone",
    "openai",
    "pytest",
    "httpx",
    "python-dotenv"
]

[project.urls]
"Homepage" = "https://huggingface.co/spaces/MSSDK/ai-cognitive-firewall"
"Bug Tracker" = "https://github.com/sivasaimamidi/ai-cognitive-firewall/issues"

[project.scripts]
server = "server.app:main"
